--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   ],
   "packageManager": "yarn@4.3.1",
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20240725.0",
     "@hono/eslint-config": "^0.0.6",
     "eslint": "^9.8.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "wrangler": "^3.67.1"
+  },
+  "dependencies": {
+    "hono": "^4.5.3"
   }
 }
