--- a/projects/rag-app/package.json
+++ b/projects/rag-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vectorize-hello-world",
+  "name": "rag-app",
   "scripts": {
     "dev": "wrangler dev --remote",
     "deploy": "wrangler deploy"
