--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240725.0",
     "@hono/eslint-config": "^0.0.6",
-    "eslint": "^9.8.0",
+    "eslint": "8",
     "typescript": "^5.5.4",
     "wrangler": "^3.67.1"
   },
