--- a/projects/app-rag/wrangler.toml
+++ b/projects/app-rag/wrangler.toml
@@ -1,9 +1,18 @@
-name = "ai-hello-world"
+name = "app-rag"
 compatibility_date = "2024-07-01"
 main = "src/index.ts"
 
 [ai]
 binding = "AI"
+
+[[d1_databases]]
+binding = "DB"
+database_name = "database-rag-app"
+database_id = "e9483c99-c133-4c2d-8997-e8551f7a5b7d"
+
+[[vectorize]]
+binding = "VECTORIZE"
+index_name = "index-vectorize-rag-app"
 
 # [vars]
 # MY_VAR = "my-variable"
@@ -15,8 +24,3 @@ binding = "AI"
 # [[r2_buckets]]
 # binding = "MY_BUCKET"
 # bucket_name = "my-bucket"
-
-#[[d1_databases]]
-#binding = "MY_DB"
-#database_name = "my-database"
-#database_id = ""
