--- a/projects/hello-ai/wrangler.toml
+++ b/projects/hello-ai/wrangler.toml
@@ -1,18 +1,9 @@
-name = "rag-app"
+name = "hello-ai"
 compatibility_date = "2024-07-01"
 main = "src/index.ts"
 
 [ai]
 binding = "AI"
-
-[[d1_databases]]
-binding = "DB"
-database_name = "database-rag-app"
-database_id = "e9483c99-c133-4c2d-8997-e8551f7a5b7d"
-
-[[vectorize]]
-binding = "VECTORIZE"
-index_name = "index-vectorize-rag-app"
 
 # [vars]
 # MY_VAR = "my-variable"
@@ -24,3 +15,8 @@ index_name = "index-vectorize-rag-app"
 # [[r2_buckets]]
 # binding = "MY_BUCKET"
 # bucket_name = "my-bucket"
+
+#[[d1_databases]]
+#binding = "MY_DB"
+#database_name = "my-database"
+#database_id = ""
