--- a/projects/hello-embedding/wrangler.toml
+++ b/projects/hello-embedding/wrangler.toml
@@ -1,6 +1,9 @@
-name = "d1-hello-world"
+name = "hello-embedding"
 compatibility_date = "2024-07-01"
 main = "src/index.ts"
+
+[ai]
+binding = "AI"
 
 # [vars]
 # MY_VAR = "my-variable"
@@ -13,10 +16,8 @@ main = "src/index.ts"
 # binding = "MY_BUCKET"
 # bucket_name = "my-bucket"
 
-[[d1_databases]]
-binding = "DB"
-database_name = "database-d1-hello-world"
-database_id = "f0fa72b3-d316-4043-bf63-75220c6da8ed" # Replace it to your database id
+#[[d1_databases]]
+#binding = "MY_DB"
+#database_name = "my-database"
+#database_id = ""
 
-# [ai]
-# binding = "AI"
