--- a/projects/app-function-calling/package.json
+++ b/projects/app-function-calling/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "function-calling-app",
+  "name": "app-function-calling",
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy"
