--- a/projects/hello-d1/wrangler.toml
+++ b/projects/hello-d1/wrangler.toml
@@ -1,9 +1,9 @@
-name = "hono-hello-world"
+name = "hello-d1"
 compatibility_date = "2024-07-01"
 main = "src/index.ts"
 
-[vars]
-MY_VAR = "my-variable"
+# [vars]
+# MY_VAR = "my-variable"
 
 #[[kv_namespaces]]
 #binding = "MY_KV_NAMESPACE"
@@ -13,10 +13,10 @@ MY_VAR = "my-variable"
 # binding = "MY_BUCKET"
 # bucket_name = "my-bucket"
 
-#[[d1_databases]]
-#binding = "MY_DB"
-#database_name = "my-database"
-#database_id = ""
+[[d1_databases]]
+binding = "DB"
+database_name = "database-d1-hello-world"
+database_id = "f0fa72b3-d316-4043-bf63-75220c6da8ed" # Replace it to your database id
 
 # [ai]
 # binding = "AI"
