--- a/projects/hello-workers/package.json
+++ b/projects/hello-workers/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "embedding-hello-world",
+  "name": "hello-workers",
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy"
