--- a/projects/hello-embedding/package.json
+++ b/projects/hello-embedding/package.json
@@ -3,5 +3,8 @@
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy"
+  },
+  "dependencies": {
+    "hono": "^4.5.3"
   }
 }
